src/observer/sql/parser/yacc_sql.output
Terminals unused in grammar

    PATH
    STRING_V


Grammar

    0 $accept: commands $end

    1 commands: %empty
    2         | commands command

    3 command: select
    4        | insert
    5        | update
    6        | delete
    7        | create_table
    8        | drop_table
    9        | show_tables
   10        | desc_table
   11        | create_index
   12        | drop_index
   13        | sync
   14        | begin
   15        | commit
   16        | rollback
   17        | load_data
   18        | help
   19        | exit

   20 exit: EXIT SEMICOLON

   21 help: HELP SEMICOLON

   22 sync: SYNC SEMICOLON

   23 begin: TRX_BEGIN SEMICOLON

   24 commit: TRX_COMMIT SEMICOLON

   25 rollback: TRX_ROLLBACK SEMICOLON

   26 drop_table: DROP TABLE ID SEMICOLON

   27 show_tables: SHOW TABLES SEMICOLON

   28 desc_table: DESC ID SEMICOLON

   29 create_index: CREATE index_type INDEX ID ON ID LBRACE index_attr_id id_list RBRACE SEMICOLON

   30 index_type: %empty
   31           | UNIQUE

   32 id_list: %empty
   33        | COMMA index_attr_id id_list

   34 index_attr_id: ID

   35 drop_index: DROP INDEX ID SEMICOLON

   36 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

   37 attr_def_list: %empty
   38              | COMMA attr_def attr_def_list

   39 attr_def: ID_get type LBRACE number RBRACE
   40         | ID_get type
   41         | ID_get type NOT NULLTOKEN
   42         | ID_get type NULLABLE

   43 number: NUMBER

   44 type: INT_T
   45     | STRING_T
   46     | FLOAT_T
   47     | DATE_T
   48     | TEXT_T

   49 ID_get: ID

   50 insert: INSERT INTO ID VALUES record record_list SEMICOLON

   51 record_list: %empty
   52            | COMMA record record_list

   53 record: LBRACE value value_list RBRACE

   54 value_list: %empty
   55           | COMMA value value_list

   56 value: NUMBER
   57      | FLOAT
   58      | SSS
   59      | DATE
   60      | NULLTOKEN

   61 delete: DELETE FROM ID where SEMICOLON

   62 update: UPDATE ID SET ID EQ value where SEMICOLON

   63 select: SELECT select_attr FROM ID rel_list inner_join where group order SEMICOLON

   64 order: %empty
   65      | ORDER BY ID order_type order_list
   66      | ORDER BY ID DOT ID order_type order_list

   67 group: %empty
   68      | GROUP BY ID group_id_list
   69      | GROUP BY ID DOT ID group_id_list

   70 group_id_list: %empty
   71              | COMMA ID group_id_list
   72              | COMMA ID DOT ID group_id_list

   73 order_list: %empty
   74           | COMMA ID order_type order_list
   75           | COMMA ID DOT ID order_type order_list

   76 order_type: %empty
   77           | ASC
   78           | DESC

   79 select_attr: STAR
   80            | add_sub_expression aggr_list
   81            | add_sub_expression expression_list

   82 expression_list: %empty
   83                | COMMA add_sub_expression

   84 add_sub_expression: add_sub_expression add_or_sub mul_div_expression
   85                   | mul_div_expression

   86 add_or_sub: ADD_OP
   87           | SUB_OP

   88 mul_div_expression: mul_div_expression mul_or_div atom_expression
   89                   | atom_expression

   90 mul_or_div: STAR
   91           | DIV_OP

   92 atom_expression: LBRACE add_sub_expression RBRACE
   93                | ID
   94                | ID DOT ID
   95                | NUMBER
   96                | FLOAT

   97 aggr_list: COMMA aggr aggr_list
   98          | COMMA aggr attr_list

   99 aggr: aggr_op LBRACE STAR RBRACE
  100     | aggr_op LBRACE ID RBRACE
  101     | aggr_op LBRACE ID DOT ID RBRACE
  102     | aggr_op LBRACE NUMBER RBRACE
  103     | aggr_op LBRACE FLOAT RBRACE
  104     | aggr_op LBRACE SSS RBRACE

  105 aggr_op: AGGR_COUNT
  106        | AGGR_AVG
  107        | AGGR_MAX
  108        | AGGR_MIN

  109 attr_list: %empty
  110          | COMMA ID attr_list
  111          | COMMA ID DOT ID attr_list
  112          | COMMA ID aggr_list
  113          | COMMA ID DOT ID aggr_list

  114 rel_list: %empty
  115         | COMMA ID rel_list

  116 inner_join: %empty
  117           | INNER JOIN ID rel_list on inner_join

  118 on: %empty
  119   | ON condition condition_list

  120 where: %empty
  121      | WHERE condition condition_list

  122 condition_list: %empty
  123               | AND condition condition_list

  124 condition: ID comOp value
  125          | value comOp value
  126          | ID comOp ID
  127          | value comOp ID
  128          | ID DOT ID comOp value
  129          | value comOp ID DOT ID
  130          | ID DOT ID comOp ID DOT ID

  131 comOp: EQ
  132      | LT
  133      | GT
  134      | LE
  135      | GE
  136      | NE
  137      | ISTOKEN
  138      | ISTOKEN NOT

  139 load_data: LOAD DATA INFILE SSS INTO TABLE ID SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SEMICOLON (258) 20 21 22 23 24 25 26 27 28 29 35 36 50 61 62 63 139
    CREATE (259) 29 36
    DROP (260) 26 35
    TABLE (261) 26 36 139
    TABLES (262) 27
    INDEX (263) 29 35
    SELECT (264) 63
    DESC (265) 28 78
    ASC (266) 77
    SHOW (267) 27
    SYNC (268) 22
    INSERT (269) 50
    DELETE (270) 61
    UPDATE (271) 62
    LBRACE (272) 29 36 39 53 92 99 100 101 102 103 104
    RBRACE (273) 29 36 39 53 92 99 100 101 102 103 104
    COMMA (274) 33 38 52 55 71 72 74 75 83 97 98 110 111 112 113 115
    TRX_BEGIN (275) 23
    TRX_COMMIT (276) 24
    TRX_ROLLBACK (277) 25
    INT_T (278) 44
    STRING_T (279) 45
    FLOAT_T (280) 46
    DATE_T (281) 47
    TEXT_T (282) 48
    HELP (283) 21
    EXIT (284) 20
    DOT (285) 66 69 72 75 94 101 111 113 128 129 130
    INTO (286) 50 139
    VALUES (287) 50
    FROM (288) 61 63
    WHERE (289) 121
    AND (290) 123
    SET (291) 62
    ON (292) 29 119
    LOAD (293) 139
    DATA (294) 139
    INFILE (295) 139
    EQ (296) 62 131
    LT (297) 132
    GT (298) 133
    LE (299) 134
    GE (300) 135
    NE (301) 136
    AGGR_COUNT (302) 105
    AGGR_MAX (303) 107
    AGGR_MIN (304) 108
    AGGR_AVG (305) 106
    UNIQUE (306) 31
    NOT (307) 41 138
    NULLTOKEN (308) 41 60
    NULLABLE (309) 42
    ISTOKEN (310) 137 138
    ORDER (311) 65 66
    GROUP (312) 68 69
    BY (313) 65 66 68 69
    INNER (314) 117
    JOIN (315) 117
    ADD_OP (316) 86
    SUB_OP (317) 87
    DIV_OP (318) 91
    NUMBER <number> (319) 43 56 95 102
    FLOAT <floats> (320) 57 96 103
    ID <string> (321) 26 28 29 34 35 36 49 50 61 62 63 65 66 68 69 71 72 74 75 93 94 100 101 110 111 112 113 115 117 124 126 127 128 129 130 139
    DATE <string> (322) 59
    PATH <string> (323)
    SSS <string> (324) 58 104 139
    STAR <string> (325) 79 90 99
    STRING_V <string> (326)


Nonterminals, with rules where they appear

    $accept (72)
        on left: 0
    commands (73)
        on left: 1 2
        on right: 0 2
    command (74)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
        on right: 2
    exit (75)
        on left: 20
        on right: 19
    help (76)
        on left: 21
        on right: 18
    sync (77)
        on left: 22
        on right: 13
    begin (78)
        on left: 23
        on right: 14
    commit (79)
        on left: 24
        on right: 15
    rollback (80)
        on left: 25
        on right: 16
    drop_table (81)
        on left: 26
        on right: 8
    show_tables (82)
        on left: 27
        on right: 9
    desc_table (83)
        on left: 28
        on right: 10
    create_index (84)
        on left: 29
        on right: 11
    index_type (85)
        on left: 30 31
        on right: 29
    id_list (86)
        on left: 32 33
        on right: 29 33
    index_attr_id (87)
        on left: 34
        on right: 29 33
    drop_index (88)
        on left: 35
        on right: 12
    create_table (89)
        on left: 36
        on right: 7
    attr_def_list (90)
        on left: 37 38
        on right: 36 38
    attr_def (91)
        on left: 39 40 41 42
        on right: 36 38
    number <number> (92)
        on left: 43
        on right: 39
    type <number> (93)
        on left: 44 45 46 47 48
        on right: 39 40 41 42
    ID_get (94)
        on left: 49
        on right: 39 40 41 42
    insert (95)
        on left: 50
        on right: 4
    record_list (96)
        on left: 51 52
        on right: 50 52
    record (97)
        on left: 53
        on right: 50 52
    value_list (98)
        on left: 54 55
        on right: 53 55
    value <value1> (99)
        on left: 56 57 58 59 60
        on right: 53 55 62 124 125 127 128 129
    delete (100)
        on left: 61
        on right: 6
    update (101)
        on left: 62
        on right: 5
    select (102)
        on left: 63
        on right: 3
    order (103)
        on left: 64 65 66
        on right: 63
    group (104)
        on left: 67 68 69
        on right: 63
    group_id_list (105)
        on left: 70 71 72
        on right: 68 69 71 72
    order_list (106)
        on left: 73 74 75
        on right: 65 66 74 75
    order_type <number> (107)
        on left: 76 77 78
        on right: 65 66 74 75
    select_attr (108)
        on left: 79 80 81
        on right: 63
    expression_list (109)
        on left: 82 83
        on right: 81
    add_sub_expression <exp_node> (110)
        on left: 84 85
        on right: 80 81 83 84 92
    add_or_sub <number> (111)
        on left: 86 87
        on right: 84
    mul_div_expression <exp_node> (112)
        on left: 88 89
        on right: 84 85 88
    mul_or_div <number> (113)
        on left: 90 91
        on right: 88
    atom_expression <exp_node> (114)
        on left: 92 93 94 95 96
        on right: 88 89
    aggr_list (115)
        on left: 97 98
        on right: 80 97 112 113
    aggr (116)
        on left: 99 100 101 102 103 104
        on right: 97 98
    aggr_op <number> (117)
        on left: 105 106 107 108
        on right: 99 100 101 102 103 104
    attr_list (118)
        on left: 109 110 111 112 113
        on right: 98 110 111
    rel_list (119)
        on left: 114 115
        on right: 63 115 117
    inner_join (120)
        on left: 116 117
        on right: 63 117
    on (121)
        on left: 118 119
        on right: 117
    where (122)
        on left: 120 121
        on right: 61 62 63
    condition_list (123)
        on left: 122 123
        on right: 119 121 123
    condition <condition1> (124)
        on left: 124 125 126 127 128 129 130
        on right: 119 121 123
    comOp (125)
        on left: 131 132 133 134 135 136 137 138
        on right: 124 125 126 127 128 129 130
    load_data (126)
        on left: 139
        on right: 17


State 0

    0 $accept: . commands $end

    $default  reduce using rule 1 (commands)

    commands  go to state 1


State 1

    0 $accept: commands . $end
    2 commands: commands . command

    $end          shift, and go to state 2
    CREATE        shift, and go to state 3
    DROP          shift, and go to state 4
    SELECT        shift, and go to state 5
    DESC          shift, and go to state 6
    SHOW          shift, and go to state 7
    SYNC          shift, and go to state 8
    INSERT        shift, and go to state 9
    DELETE        shift, and go to state 10
    UPDATE        shift, and go to state 11
    TRX_BEGIN     shift, and go to state 12
    TRX_COMMIT    shift, and go to state 13
    TRX_ROLLBACK  shift, and go to state 14
    HELP          shift, and go to state 15
    EXIT          shift, and go to state 16
    LOAD          shift, and go to state 17

    command       go to state 18
    exit          go to state 19
    help          go to state 20
    sync          go to state 21
    begin         go to state 22
    commit        go to state 23
    rollback      go to state 24
    drop_table    go to state 25
    show_tables   go to state 26
    desc_table    go to state 27
    create_index  go to state 28
    drop_index    go to state 29
    create_table  go to state 30
    insert        go to state 31
    delete        go to state 32
    update        go to state 33
    select        go to state 34
    load_data     go to state 35


State 2

    0 $accept: commands $end .

    $default  accept


State 3

   29 create_index: CREATE . index_type INDEX ID ON ID LBRACE index_attr_id id_list RBRACE SEMICOLON
   36 create_table: CREATE . TABLE ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

    TABLE   shift, and go to state 36
    UNIQUE  shift, and go to state 37

    $default  reduce using rule 30 (index_type)

    index_type  go to state 38


State 4

   26 drop_table: DROP . TABLE ID SEMICOLON
   35 drop_index: DROP . INDEX ID SEMICOLON

    TABLE  shift, and go to state 39
    INDEX  shift, and go to state 40


State 5

   63 select: SELECT . select_attr FROM ID rel_list inner_join where group order SEMICOLON

    LBRACE  shift, and go to state 41
    NUMBER  shift, and go to state 42
    FLOAT   shift, and go to state 43
    ID      shift, and go to state 44
    STAR    shift, and go to state 45

    select_attr         go to state 46
    add_sub_expression  go to state 47
    mul_div_expression  go to state 48
    atom_expression     go to state 49


State 6

   28 desc_table: DESC . ID SEMICOLON

    ID  shift, and go to state 50


State 7

   27 show_tables: SHOW . TABLES SEMICOLON

    TABLES  shift, and go to state 51


State 8

   22 sync: SYNC . SEMICOLON

    SEMICOLON  shift, and go to state 52


State 9

   50 insert: INSERT . INTO ID VALUES record record_list SEMICOLON

    INTO  shift, and go to state 53


State 10

   61 delete: DELETE . FROM ID where SEMICOLON

    FROM  shift, and go to state 54


State 11

   62 update: UPDATE . ID SET ID EQ value where SEMICOLON

    ID  shift, and go to state 55


State 12

   23 begin: TRX_BEGIN . SEMICOLON

    SEMICOLON  shift, and go to state 56


State 13

   24 commit: TRX_COMMIT . SEMICOLON

    SEMICOLON  shift, and go to state 57


State 14

   25 rollback: TRX_ROLLBACK . SEMICOLON

    SEMICOLON  shift, and go to state 58


State 15

   21 help: HELP . SEMICOLON

    SEMICOLON  shift, and go to state 59


State 16

   20 exit: EXIT . SEMICOLON

    SEMICOLON  shift, and go to state 60


State 17

  139 load_data: LOAD . DATA INFILE SSS INTO TABLE ID SEMICOLON

    DATA  shift, and go to state 61


State 18

    2 commands: commands command .

    $default  reduce using rule 2 (commands)


State 19

   19 command: exit .

    $default  reduce using rule 19 (command)


State 20

   18 command: help .

    $default  reduce using rule 18 (command)


State 21

   13 command: sync .

    $default  reduce using rule 13 (command)


State 22

   14 command: begin .

    $default  reduce using rule 14 (command)


State 23

   15 command: commit .

    $default  reduce using rule 15 (command)


State 24

   16 command: rollback .

    $default  reduce using rule 16 (command)


State 25

    8 command: drop_table .

    $default  reduce using rule 8 (command)


State 26

    9 command: show_tables .

    $default  reduce using rule 9 (command)


State 27

   10 command: desc_table .

    $default  reduce using rule 10 (command)


State 28

   11 command: create_index .

    $default  reduce using rule 11 (command)


State 29

   12 command: drop_index .

    $default  reduce using rule 12 (command)


State 30

    7 command: create_table .

    $default  reduce using rule 7 (command)


State 31

    4 command: insert .

    $default  reduce using rule 4 (command)


State 32

    6 command: delete .

    $default  reduce using rule 6 (command)


State 33

    5 command: update .

    $default  reduce using rule 5 (command)


State 34

    3 command: select .

    $default  reduce using rule 3 (command)


State 35

   17 command: load_data .

    $default  reduce using rule 17 (command)


State 36

   36 create_table: CREATE TABLE . ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

    ID  shift, and go to state 62


State 37

   31 index_type: UNIQUE .

    $default  reduce using rule 31 (index_type)


State 38

   29 create_index: CREATE index_type . INDEX ID ON ID LBRACE index_attr_id id_list RBRACE SEMICOLON

    INDEX  shift, and go to state 63


State 39

   26 drop_table: DROP TABLE . ID SEMICOLON

    ID  shift, and go to state 64


State 40

   35 drop_index: DROP INDEX . ID SEMICOLON

    ID  shift, and go to state 65


State 41

   92 atom_expression: LBRACE . add_sub_expression RBRACE

    LBRACE  shift, and go to state 41
    NUMBER  shift, and go to state 42
    FLOAT   shift, and go to state 43
    ID      shift, and go to state 44

    add_sub_expression  go to state 66
    mul_div_expression  go to state 48
    atom_expression     go to state 49


State 42

   95 atom_expression: NUMBER .

    $default  reduce using rule 95 (atom_expression)


State 43

   96 atom_expression: FLOAT .

    $default  reduce using rule 96 (atom_expression)


State 44

   93 atom_expression: ID .
   94                | ID . DOT ID

    DOT  shift, and go to state 67

    $default  reduce using rule 93 (atom_expression)


State 45

   79 select_attr: STAR .

    $default  reduce using rule 79 (select_attr)


State 46

   63 select: SELECT select_attr . FROM ID rel_list inner_join where group order SEMICOLON

    FROM  shift, and go to state 68


State 47

   80 select_attr: add_sub_expression . aggr_list
   81            | add_sub_expression . expression_list
   84 add_sub_expression: add_sub_expression . add_or_sub mul_div_expression

    COMMA   shift, and go to state 69
    ADD_OP  shift, and go to state 70
    SUB_OP  shift, and go to state 71

    $default  reduce using rule 82 (expression_list)

    expression_list  go to state 72
    add_or_sub       go to state 73
    aggr_list        go to state 74


State 48

   85 add_sub_expression: mul_div_expression .
   88 mul_div_expression: mul_div_expression . mul_or_div atom_expression

    DIV_OP  shift, and go to state 75
    STAR    shift, and go to state 76

    $default  reduce using rule 85 (add_sub_expression)

    mul_or_div  go to state 77


State 49

   89 mul_div_expression: atom_expression .

    $default  reduce using rule 89 (mul_div_expression)


State 50

   28 desc_table: DESC ID . SEMICOLON

    SEMICOLON  shift, and go to state 78


State 51

   27 show_tables: SHOW TABLES . SEMICOLON

    SEMICOLON  shift, and go to state 79


State 52

   22 sync: SYNC SEMICOLON .

    $default  reduce using rule 22 (sync)


State 53

   50 insert: INSERT INTO . ID VALUES record record_list SEMICOLON

    ID  shift, and go to state 80


State 54

   61 delete: DELETE FROM . ID where SEMICOLON

    ID  shift, and go to state 81


State 55

   62 update: UPDATE ID . SET ID EQ value where SEMICOLON

    SET  shift, and go to state 82


State 56

   23 begin: TRX_BEGIN SEMICOLON .

    $default  reduce using rule 23 (begin)


State 57

   24 commit: TRX_COMMIT SEMICOLON .

    $default  reduce using rule 24 (commit)


State 58

   25 rollback: TRX_ROLLBACK SEMICOLON .

    $default  reduce using rule 25 (rollback)


State 59

   21 help: HELP SEMICOLON .

    $default  reduce using rule 21 (help)


State 60

   20 exit: EXIT SEMICOLON .

    $default  reduce using rule 20 (exit)


State 61

  139 load_data: LOAD DATA . INFILE SSS INTO TABLE ID SEMICOLON

    INFILE  shift, and go to state 83


State 62

   36 create_table: CREATE TABLE ID . LBRACE attr_def attr_def_list RBRACE SEMICOLON

    LBRACE  shift, and go to state 84


State 63

   29 create_index: CREATE index_type INDEX . ID ON ID LBRACE index_attr_id id_list RBRACE SEMICOLON

    ID  shift, and go to state 85


State 64

   26 drop_table: DROP TABLE ID . SEMICOLON

    SEMICOLON  shift, and go to state 86


State 65

   35 drop_index: DROP INDEX ID . SEMICOLON

    SEMICOLON  shift, and go to state 87


State 66

   84 add_sub_expression: add_sub_expression . add_or_sub mul_div_expression
   92 atom_expression: LBRACE add_sub_expression . RBRACE

    RBRACE  shift, and go to state 88
    ADD_OP  shift, and go to state 70
    SUB_OP  shift, and go to state 71

    add_or_sub  go to state 73


State 67

   94 atom_expression: ID DOT . ID

    ID  shift, and go to state 89


State 68

   63 select: SELECT select_attr FROM . ID rel_list inner_join where group order SEMICOLON

    ID  shift, and go to state 90


State 69

   83 expression_list: COMMA . add_sub_expression
   97 aggr_list: COMMA . aggr aggr_list
   98          | COMMA . aggr attr_list

    LBRACE      shift, and go to state 41
    AGGR_COUNT  shift, and go to state 91
    AGGR_MAX    shift, and go to state 92
    AGGR_MIN    shift, and go to state 93
    AGGR_AVG    shift, and go to state 94
    NUMBER      shift, and go to state 42
    FLOAT       shift, and go to state 43
    ID          shift, and go to state 44

    add_sub_expression  go to state 95
    mul_div_expression  go to state 48
    atom_expression     go to state 49
    aggr                go to state 96
    aggr_op             go to state 97


State 70

   86 add_or_sub: ADD_OP .

    $default  reduce using rule 86 (add_or_sub)


State 71

   87 add_or_sub: SUB_OP .

    $default  reduce using rule 87 (add_or_sub)


State 72

   81 select_attr: add_sub_expression expression_list .

    $default  reduce using rule 81 (select_attr)


State 73

   84 add_sub_expression: add_sub_expression add_or_sub . mul_div_expression

    LBRACE  shift, and go to state 41
    NUMBER  shift, and go to state 42
    FLOAT   shift, and go to state 43
    ID      shift, and go to state 44

    mul_div_expression  go to state 98
    atom_expression     go to state 49


State 74

   80 select_attr: add_sub_expression aggr_list .

    $default  reduce using rule 80 (select_attr)


State 75

   91 mul_or_div: DIV_OP .

    $default  reduce using rule 91 (mul_or_div)


State 76

   90 mul_or_div: STAR .

    $default  reduce using rule 90 (mul_or_div)


State 77

   88 mul_div_expression: mul_div_expression mul_or_div . atom_expression

    LBRACE  shift, and go to state 41
    NUMBER  shift, and go to state 42
    FLOAT   shift, and go to state 43
    ID      shift, and go to state 44

    atom_expression  go to state 99


State 78

   28 desc_table: DESC ID SEMICOLON .

    $default  reduce using rule 28 (desc_table)


State 79

   27 show_tables: SHOW TABLES SEMICOLON .

    $default  reduce using rule 27 (show_tables)


State 80

   50 insert: INSERT INTO ID . VALUES record record_list SEMICOLON

    VALUES  shift, and go to state 100


State 81

   61 delete: DELETE FROM ID . where SEMICOLON

    WHERE  shift, and go to state 101

    $default  reduce using rule 120 (where)

    where  go to state 102


State 82

   62 update: UPDATE ID SET . ID EQ value where SEMICOLON

    ID  shift, and go to state 103


State 83

  139 load_data: LOAD DATA INFILE . SSS INTO TABLE ID SEMICOLON

    SSS  shift, and go to state 104


State 84

   36 create_table: CREATE TABLE ID LBRACE . attr_def attr_def_list RBRACE SEMICOLON

    ID  shift, and go to state 105

    attr_def  go to state 106
    ID_get    go to state 107


State 85

   29 create_index: CREATE index_type INDEX ID . ON ID LBRACE index_attr_id id_list RBRACE SEMICOLON

    ON  shift, and go to state 108


State 86

   26 drop_table: DROP TABLE ID SEMICOLON .

    $default  reduce using rule 26 (drop_table)


State 87

   35 drop_index: DROP INDEX ID SEMICOLON .

    $default  reduce using rule 35 (drop_index)


State 88

   92 atom_expression: LBRACE add_sub_expression RBRACE .

    $default  reduce using rule 92 (atom_expression)


State 89

   94 atom_expression: ID DOT ID .

    $default  reduce using rule 94 (atom_expression)


State 90

   63 select: SELECT select_attr FROM ID . rel_list inner_join where group order SEMICOLON

    COMMA  shift, and go to state 109

    $default  reduce using rule 114 (rel_list)

    rel_list  go to state 110


State 91

  105 aggr_op: AGGR_COUNT .

    $default  reduce using rule 105 (aggr_op)


State 92

  107 aggr_op: AGGR_MAX .

    $default  reduce using rule 107 (aggr_op)


State 93

  108 aggr_op: AGGR_MIN .

    $default  reduce using rule 108 (aggr_op)


State 94

  106 aggr_op: AGGR_AVG .

    $default  reduce using rule 106 (aggr_op)


State 95

   83 expression_list: COMMA add_sub_expression .
   84 add_sub_expression: add_sub_expression . add_or_sub mul_div_expression

    ADD_OP  shift, and go to state 70
    SUB_OP  shift, and go to state 71

    $default  reduce using rule 83 (expression_list)

    add_or_sub  go to state 73


State 96

   97 aggr_list: COMMA aggr . aggr_list
   98          | COMMA aggr . attr_list

    COMMA  shift, and go to state 111

    $default  reduce using rule 109 (attr_list)

    aggr_list  go to state 112
    attr_list  go to state 113


State 97

   99 aggr: aggr_op . LBRACE STAR RBRACE
  100     | aggr_op . LBRACE ID RBRACE
  101     | aggr_op . LBRACE ID DOT ID RBRACE
  102     | aggr_op . LBRACE NUMBER RBRACE
  103     | aggr_op . LBRACE FLOAT RBRACE
  104     | aggr_op . LBRACE SSS RBRACE

    LBRACE  shift, and go to state 114


State 98

   84 add_sub_expression: add_sub_expression add_or_sub mul_div_expression .
   88 mul_div_expression: mul_div_expression . mul_or_div atom_expression

    DIV_OP  shift, and go to state 75
    STAR    shift, and go to state 76

    $default  reduce using rule 84 (add_sub_expression)

    mul_or_div  go to state 77


State 99

   88 mul_div_expression: mul_div_expression mul_or_div atom_expression .

    $default  reduce using rule 88 (mul_div_expression)


State 100

   50 insert: INSERT INTO ID VALUES . record record_list SEMICOLON

    LBRACE  shift, and go to state 115

    record  go to state 116


State 101

  121 where: WHERE . condition condition_list

    NULLTOKEN  shift, and go to state 117
    NUMBER     shift, and go to state 118
    FLOAT      shift, and go to state 119
    ID         shift, and go to state 120
    DATE       shift, and go to state 121
    SSS        shift, and go to state 122

    value      go to state 123
    condition  go to state 124


State 102

   61 delete: DELETE FROM ID where . SEMICOLON

    SEMICOLON  shift, and go to state 125


State 103

   62 update: UPDATE ID SET ID . EQ value where SEMICOLON

    EQ  shift, and go to state 126


State 104

  139 load_data: LOAD DATA INFILE SSS . INTO TABLE ID SEMICOLON

    INTO  shift, and go to state 127


State 105

   49 ID_get: ID .

    $default  reduce using rule 49 (ID_get)


State 106

   36 create_table: CREATE TABLE ID LBRACE attr_def . attr_def_list RBRACE SEMICOLON

    COMMA  shift, and go to state 128

    $default  reduce using rule 37 (attr_def_list)

    attr_def_list  go to state 129


State 107

   39 attr_def: ID_get . type LBRACE number RBRACE
   40         | ID_get . type
   41         | ID_get . type NOT NULLTOKEN
   42         | ID_get . type NULLABLE

    INT_T     shift, and go to state 130
    STRING_T  shift, and go to state 131
    FLOAT_T   shift, and go to state 132
    DATE_T    shift, and go to state 133
    TEXT_T    shift, and go to state 134

    type  go to state 135


State 108

   29 create_index: CREATE index_type INDEX ID ON . ID LBRACE index_attr_id id_list RBRACE SEMICOLON

    ID  shift, and go to state 136


State 109

  115 rel_list: COMMA . ID rel_list

    ID  shift, and go to state 137


State 110

   63 select: SELECT select_attr FROM ID rel_list . inner_join where group order SEMICOLON

    INNER  shift, and go to state 138

    $default  reduce using rule 116 (inner_join)

    inner_join  go to state 139


State 111

   97 aggr_list: COMMA . aggr aggr_list
   98          | COMMA . aggr attr_list
  110 attr_list: COMMA . ID attr_list
  111          | COMMA . ID DOT ID attr_list
  112          | COMMA . ID aggr_list
  113          | COMMA . ID DOT ID aggr_list

    AGGR_COUNT  shift, and go to state 91
    AGGR_MAX    shift, and go to state 92
    AGGR_MIN    shift, and go to state 93
    AGGR_AVG    shift, and go to state 94
    ID          shift, and go to state 140

    aggr     go to state 96
    aggr_op  go to state 97


State 112

   97 aggr_list: COMMA aggr aggr_list .

    $default  reduce using rule 97 (aggr_list)


State 113

   98 aggr_list: COMMA aggr attr_list .

    $default  reduce using rule 98 (aggr_list)


State 114

   99 aggr: aggr_op LBRACE . STAR RBRACE
  100     | aggr_op LBRACE . ID RBRACE
  101     | aggr_op LBRACE . ID DOT ID RBRACE
  102     | aggr_op LBRACE . NUMBER RBRACE
  103     | aggr_op LBRACE . FLOAT RBRACE
  104     | aggr_op LBRACE . SSS RBRACE

    NUMBER  shift, and go to state 141
    FLOAT   shift, and go to state 142
    ID      shift, and go to state 143
    SSS     shift, and go to state 144
    STAR    shift, and go to state 145


State 115

   53 record: LBRACE . value value_list RBRACE

    NULLTOKEN  shift, and go to state 117
    NUMBER     shift, and go to state 118
    FLOAT      shift, and go to state 119
    DATE       shift, and go to state 121
    SSS        shift, and go to state 122

    value  go to state 146


State 116

   50 insert: INSERT INTO ID VALUES record . record_list SEMICOLON

    COMMA  shift, and go to state 147

    $default  reduce using rule 51 (record_list)

    record_list  go to state 148


State 117

   60 value: NULLTOKEN .

    $default  reduce using rule 60 (value)


State 118

   56 value: NUMBER .

    $default  reduce using rule 56 (value)


State 119

   57 value: FLOAT .

    $default  reduce using rule 57 (value)


State 120

  124 condition: ID . comOp value
  126          | ID . comOp ID
  128          | ID . DOT ID comOp value
  130          | ID . DOT ID comOp ID DOT ID

    DOT      shift, and go to state 149
    EQ       shift, and go to state 150
    LT       shift, and go to state 151
    GT       shift, and go to state 152
    LE       shift, and go to state 153
    GE       shift, and go to state 154
    NE       shift, and go to state 155
    ISTOKEN  shift, and go to state 156

    comOp  go to state 157


State 121

   59 value: DATE .

    $default  reduce using rule 59 (value)


State 122

   58 value: SSS .

    $default  reduce using rule 58 (value)


State 123

  125 condition: value . comOp value
  127          | value . comOp ID
  129          | value . comOp ID DOT ID

    EQ       shift, and go to state 150
    LT       shift, and go to state 151
    GT       shift, and go to state 152
    LE       shift, and go to state 153
    GE       shift, and go to state 154
    NE       shift, and go to state 155
    ISTOKEN  shift, and go to state 156

    comOp  go to state 158


State 124

  121 where: WHERE condition . condition_list

    AND  shift, and go to state 159

    $default  reduce using rule 122 (condition_list)

    condition_list  go to state 160


State 125

   61 delete: DELETE FROM ID where SEMICOLON .

    $default  reduce using rule 61 (delete)


State 126

   62 update: UPDATE ID SET ID EQ . value where SEMICOLON

    NULLTOKEN  shift, and go to state 117
    NUMBER     shift, and go to state 118
    FLOAT      shift, and go to state 119
    DATE       shift, and go to state 121
    SSS        shift, and go to state 122

    value  go to state 161


State 127

  139 load_data: LOAD DATA INFILE SSS INTO . TABLE ID SEMICOLON

    TABLE  shift, and go to state 162


State 128

   38 attr_def_list: COMMA . attr_def attr_def_list

    ID  shift, and go to state 105

    attr_def  go to state 163
    ID_get    go to state 107


State 129

   36 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list . RBRACE SEMICOLON

    RBRACE  shift, and go to state 164


State 130

   44 type: INT_T .

    $default  reduce using rule 44 (type)


State 131

   45 type: STRING_T .

    $default  reduce using rule 45 (type)


State 132

   46 type: FLOAT_T .

    $default  reduce using rule 46 (type)


State 133

   47 type: DATE_T .

    $default  reduce using rule 47 (type)


State 134

   48 type: TEXT_T .

    $default  reduce using rule 48 (type)


State 135

   39 attr_def: ID_get type . LBRACE number RBRACE
   40         | ID_get type .
   41         | ID_get type . NOT NULLTOKEN
   42         | ID_get type . NULLABLE

    LBRACE    shift, and go to state 165
    NOT       shift, and go to state 166
    NULLABLE  shift, and go to state 167

    $default  reduce using rule 40 (attr_def)


State 136

   29 create_index: CREATE index_type INDEX ID ON ID . LBRACE index_attr_id id_list RBRACE SEMICOLON

    LBRACE  shift, and go to state 168


State 137

  115 rel_list: COMMA ID . rel_list

    COMMA  shift, and go to state 109

    $default  reduce using rule 114 (rel_list)

    rel_list  go to state 169


State 138

  117 inner_join: INNER . JOIN ID rel_list on inner_join

    JOIN  shift, and go to state 170


State 139

   63 select: SELECT select_attr FROM ID rel_list inner_join . where group order SEMICOLON

    WHERE  shift, and go to state 101

    $default  reduce using rule 120 (where)

    where  go to state 171


State 140

  110 attr_list: COMMA ID . attr_list
  111          | COMMA ID . DOT ID attr_list
  112          | COMMA ID . aggr_list
  113          | COMMA ID . DOT ID aggr_list

    COMMA  shift, and go to state 111
    DOT    shift, and go to state 172

    $default  reduce using rule 109 (attr_list)

    aggr_list  go to state 173
    attr_list  go to state 174


State 141

  102 aggr: aggr_op LBRACE NUMBER . RBRACE

    RBRACE  shift, and go to state 175


State 142

  103 aggr: aggr_op LBRACE FLOAT . RBRACE

    RBRACE  shift, and go to state 176


State 143

  100 aggr: aggr_op LBRACE ID . RBRACE
  101     | aggr_op LBRACE ID . DOT ID RBRACE

    RBRACE  shift, and go to state 177
    DOT     shift, and go to state 178


State 144
